fix: allow more extreme editor split on small screens
Closes #11

--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -4077,6 +4077,7 @@ body {
 }
 .map-embed {
 	position: relative;
+	min-width: 0;
 }
 .map-embed .loading {
 	color: #000;
